--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -1,3 +1,7 @@
+@import 'app';
+@import '_register';
+
+
 .loading {
     border: 16px solid #f3f3f3; /* Light grey */
     border-top: 16px solid #3498db; /* Blue */
